United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6829194 JSR 292 needs to support compressed oops
6829194 : JSR 292 needs to support compressed oops

Details
Type:
Bug
Submit Date:
2009-04-11
Status:
Closed
Updated Date:
2011-04-20
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs20,7
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Duplicate:
Relates:
Relates:
Relates:

Sub Tasks

Description
There are unimplemented portions of the hotspot code for method handles and invokedynamic specific to UseCompressedOops.  They need to be filled in.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/d55217dc206f
                                     
2010-10-11
EVALUATION

Yes
                                     
2010-09-27



Hardware and Software, Engineered to Work Together