6829194: JSR 292 needs to support compressed oops

Reviewed-by: kvn, jrose